[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
]

[tool.mypy]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "photonlibpy.*"
# https://github.com/PhotonVision/photonvision/issues/1210
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-markers -v --maxfail=2"
pythonpath = "."
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # flake8-bugbear
    "B",
    # pyupgrade
    "UP",
    # flake8-comprehensions
    "C4",
    # flake8-logging-format
    "G",
    # flake8-simplify
    "SIM",
    # flake8-print
    "T20",
    # perflint
    "PERF",
]
ignore = ["E501"]

[tool.pdm]
package-type = "application"

[tool.pdm.scripts]
deploy = "robotpy deploy"
download = "robotpy sync --no-install"
sim = "robotpy sim"
test = "robotpy test --"

[tool.pdm.dev-dependencies]
dev = [
    "hypothesis",
    "pytest>=7.2.0",
    "pytest-integration>=0.2.3",
]
typing = [
    "mypy>=1.8.0",
]

[project]
name = "pycrescendo"
version = "0.0.0"
description = "The Drop Bears' FRC 2024 robot code"
authors = [
    {name = "The Drop Bears", email = "enquiries@thedropbears.org.au"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"

dependencies = [
    "numpy~=1.25",
    "phoenix6~=24.2.0",
    # robotpy[apriltag] pins numpy to a version that doesn't build cleanly on Python 3.12.
    "robotpy==2024.3.1.0",
    "robotpy-apriltag~=2024.3.1",
    "robotpy-navx==2024.1.0",
    "robotpy-rev~=2024.2.1",
    "robotpy-wpilib-utilities==2024.0.0",
    "photonlibpy==2024.2.6",
]

[tool.robotpy]
requires = [
    "numpy~=1.25",
    "phoenix6~=24.2.0",
    "robotpy-navx==2024.1.0",
    "robotpy-rev~=2024.2.1",
    "robotpy-wpilib-utilities==2024.0.0",
    "photonlibpy==2024.2.6",
]
robotpy_version = "2024.3.1.0"
robotpy_extras = ["apriltag"]
